{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 95,
  "lineage": "d8a31fec-8d49-2c27-a172-a810a61e5089",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "agent_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea54551790818b9b",
            "arn": "arn:aws:ec2:ap-south-1:705307574472:elastic-ip/eipalloc-0ea54551790818b9b",
            "association_id": "eipassoc-0fa9d2712843b20c1",
            "domain": "vpc",
            "id": "eipalloc-0ea54551790818b9b",
            "instance": "i-08a87115c2e6914b0",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-023022f9ceafd618f",
            "private_dns": "ip-10-0-0-5.ap-south-1.compute.internal",
            "private_ip": "10.0.0.5",
            "public_dns": "ec2-52-66-75-222.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.75.222",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "agent_eip"
            },
            "tags_all": {
              "Name": "agent_eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "master_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9f91443321261fe",
            "arn": "arn:aws:ec2:ap-south-1:705307574472:elastic-ip/eipalloc-0d9f91443321261fe",
            "association_id": "eipassoc-03a4c7bb0fcff179d",
            "domain": "vpc",
            "id": "eipalloc-0d9f91443321261fe",
            "instance": "i-01af3c09f92632bdf",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-03f29e28e3327a1e2",
            "private_dns": "ip-10-0-0-40.ap-south-1.compute.internal",
            "private_ip": "10.0.0.40",
            "public_dns": "ec2-13-232-29-63.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.29.63",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "master_eip"
            },
            "tags_all": {
              "Name": "master_eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_agent_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:705307574472:instance/i-08a87115c2e6914b0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "three_ec2_iam_role",
            "id": "i-08a87115c2e6914b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "three_tier_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-023022f9ceafd618f"
              }
            ],
            "primary_network_interface_id": "eni-023022f9ceafd618f",
            "private_dns": "ip-10-0-0-5.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.5",
            "public_dns": "ec2-52-66-75-222.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.75.222",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f66f46500e9f495f",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c8c7a882e03ba0c",
            "tags": {
              "Name": "three_jenkins_agent"
            },
            "tags_all": {
              "Name": "three_jenkins_agent"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2cfc62de8ac5514"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "i-08a87115c2e6914b0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_iam_role",
            "aws_key_pair.ec2_key",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_master_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:705307574472:instance/i-01af3c09f92632bdf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "three_ec2_iam_role",
            "id": "i-01af3c09f92632bdf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "three_tier_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03f29e28e3327a1e2"
              }
            ],
            "primary_network_interface_id": "eni-03f29e28e3327a1e2",
            "private_dns": "ip-10-0-0-40.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.40",
            "public_dns": "ec2-13-232-29-63.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.29.63",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0071bb8897e0002cf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c8c7a882e03ba0c",
            "tags": {
              "Name": "three_jenkin_master"
            },
            "tags_all": {
              "Name": "three_jenkin_master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2cfc62de8ac5514"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "i-01af3c09f92632bdf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_iam_role",
            "aws_key_pair.ec2_key",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "eks_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:705307574472:instance/i-035044fd4209ddf65",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "three_ec2_iam_role",
            "id": "i-035044fd4209ddf65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "three_tier_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05fa89478e3d489fd"
              }
            ],
            "primary_network_interface_id": "eni-05fa89478e3d489fd",
            "private_dns": "ip-10-0-0-247.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.247",
            "public_dns": "ec2-13-201-3-236.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.3.236",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02154059670b3c98c",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c8c7a882e03ba0c",
            "tags": {
              "Name": "three_tier_eks_server"
            },
            "tags_all": {
              "Name": "three_tier_eks_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2cfc62de8ac5514"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "i-035044fd4209ddf65",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_iam_role",
            "aws_key_pair.ec2_key",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:internet-gateway/igw-0e900a72c652b1b46",
            "id": "igw-0e900a72c652b1b46",
            "owner_id": "705307574472",
            "region": "ap-south-1",
            "tags": {
              "Name": "three_tier_igw"
            },
            "tags_all": {
              "Name": "three_tier_igw"
            },
            "vpc_id": "vpc-07186fb1a8cb8097c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:route-table/rtb-07b954fad6a2fdf49",
            "id": "rtb-07b954fad6a2fdf49",
            "owner_id": "705307574472",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e900a72c652b1b46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three_tier_rt"
            },
            "tags_all": {
              "Name": "three_tier_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07186fb1a8cb8097c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "rtb-07b954fad6a2fdf49",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.aws_ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa412794a247c82d",
            "region": "ap-south-1",
            "route_table_id": "rtb-07b954fad6a2fdf49",
            "subnet_id": "subnet-06c8c7a882e03ba0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.aws_ig",
            "aws_route_table.route_table",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0616ab1635589fc9e",
            "region": "ap-south-1",
            "route_table_id": "rtb-07b954fad6a2fdf49",
            "subnet_id": "subnet-0cddd74bd9a6e335c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.aws_ig",
            "aws_route_table.route_table",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:security-group/sg-0d2cfc62de8ac5514",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2cfc62de8ac5514",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins-Port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Sonar-Qube",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "terraform-20251225080041849700000001",
            "name_prefix": "terraform-",
            "owner_id": "705307574472",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three_tier_sg"
            },
            "tags_all": {
              "Name": "three_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07186fb1a8cb8097c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "sg-0d2cfc62de8ac5514",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:subnet/subnet-01895a2de21515866",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01895a2de21515866",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705307574472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "three_private_subnet_0"
            },
            "tags_all": {
              "Name": "three_private_subnet_0"
            },
            "vpc_id": "vpc-07186fb1a8cb8097c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "subnet-01895a2de21515866",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:subnet/subnet-04584f295e27e0c7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04584f295e27e0c7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705307574472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "three_private_subnet_1"
            },
            "tags_all": {
              "Name": "three_private_subnet_1"
            },
            "vpc_id": "vpc-07186fb1a8cb8097c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "subnet-04584f295e27e0c7e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:subnet/subnet-06c8c7a882e03ba0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c8c7a882e03ba0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "705307574472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "three_public_subnet_0"
            },
            "tags_all": {
              "Name": "three_public_subnet_0"
            },
            "vpc_id": "vpc-07186fb1a8cb8097c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "subnet-06c8c7a882e03ba0c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:subnet/subnet-0cddd74bd9a6e335c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cddd74bd9a6e335c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "705307574472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "three_public_subnet_1"
            },
            "tags_all": {
              "Name": "three_public_subnet_1"
            },
            "vpc_id": "vpc-07186fb1a8cb8097c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "subnet-0cddd74bd9a6e335c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705307574472:vpc/vpc-07186fb1a8cb8097c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-027c8c29f084950c6",
            "default_route_table_id": "rtb-0a51fef73ce957ee1",
            "default_security_group_id": "sg-0585087510cd231a0",
            "dhcp_options_id": "dopt-05838f6e699ce486a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07186fb1a8cb8097c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a51fef73ce957ee1",
            "owner_id": "705307574472",
            "region": "ap-south-1",
            "tags": {
              "Name": "three-tier-vpc"
            },
            "tags_all": {
              "Name": "three-tier-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "705307574472",
            "id": "vpc-07186fb1a8cb8097c",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}